force-app/main/default/objects/Activity/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>