force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Automated Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Call Engaged</fullName>
            </value>
            <value>
                <fullName>Call Engaged (Needs More Information from D4K)</fullName>
            </value>
            <value>
                <fullName>Call No Interest</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Document Correction</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Census Upload Call</fullName>
                <label>Imp Census Upload Call</label>
            </value>
            <value>
                <fullName>Document Review Call</fullName>
                <label>Imp Document Review Call</label>
            </value>
            <value>
                <fullName>Payroll Upload Call</fullName>
                <label>Imp Payroll Upload Call</label>
            </value>
            <value>
                <fullName>Plan Design Call</fullName>
                <label>Imp Plan Design Call</label>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>In Person Engaged</fullName>
            </value>
            <value>
                <fullName>In Person Not Interested</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Left VM</fullName>
            </value>
            <value>
                <fullName>No Start Plan</fullName>
            </value>
            <value>
                <fullName>OPD</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
                <default>true</default>
                <label>Outbound Call</label>
            </value>
            <value>
                <fullName>Plan Sponsor Tour</fullName>
            </value>
            <value>
                <fullName>Pre-Stall Plan</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Stall Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>