force-app/main/default/objects/Activity/fields/Advisor_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Relationship__c</fullName>
    <inlineHelpText>If Yes, please send info to Partnerships so they can update the system.</inlineHelpText>
    <label>Advisor Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>