force-app/main/default/objects/Activity/fields/Bureau__c.field-meta.xml
<CustomField>
    <fullName>Bureau__c</fullName>
    <inlineHelpText>Enter payroll bureau name if part of a parent-child or software vendor/payroll company relationship.</inlineHelpText>
    <label>Bureau</label>
    <length>100</length>
    <type>Text</type>
</CustomField>