force-app/main/default/objects/Activity/fields/Calendly_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Call_Type__c</fullName>
    <description>Displays the type of Calendly Call for Imps team</description>
    <formula>IF(CONTAINS(Subject, &quot;Introductory Call&quot;), &quot;Intro Call&quot;,
IF(CONTAINS(Subject, &quot;Add Your Employees&quot;), &quot;Census Call&quot;,
IF(CONTAINS(Subject, &quot;Final Review and Funding&quot;), &quot;Funding Call&quot;,
IF(CONTAINS(Subject, &quot;15 Minute&quot;), &quot;15 Min Call&quot;, &quot;Other&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the type of Calendly Call for Imps team</inlineHelpText>
    <label>Calendly Call Type</label>
    <type>Text</type>
</CustomField>