force-app/main/default/objects/Activity/fields/Calendly_Event_Slug__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Event_Slug__c</fullName>
    <description>Calendly Event Slug / end of unique Calendly URL</description>
    <inlineHelpText>Calendly Event Slug / end of unique Calendly URL</inlineHelpText>
    <label>Calendly Event Slug</label>
    <length>150</length>
    <type>Text</type>
</CustomField>