force-app/main/default/objects/Activity/fields/Call_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Hours__c</fullName>
    <formula>IF(
FLOOR(CallDurationInSeconds/3600) &gt; 10,
TEXT(FLOOR(CallDurationInSeconds/3600)),
&quot;0&quot; + TEXT(FLOOR(CallDurationInSeconds/3600))
)</formula>
    <label>Call Duration Hours</label>
    <type>Text</type>
</CustomField>