force-app/main/default/objects/Activity/fields/Call_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Minutes__c</fullName>
    <formula>IF(
FLOOR(MOD(CallDurationInSeconds,3600)/60)&gt;10, &quot;:&quot; + TEXT( FLOOR(MOD(CallDurationInSeconds,3600)/60)),
&quot;:0&quot; + TEXT( FLOOR(MOD(CallDurationInSeconds,3600)/60))
)</formula>
    <label>Call Duration Minutes</label>
    <type>Text</type>
</CustomField>