force-app/main/default/objects/Activity/fields/Call_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Seconds__c</fullName>
    <formula>IF((MOD((CallDurationInSeconds )/60,1)*60) &gt; 10,
&quot;:&quot; + TEXT( FLOOR(MOD((CallDurationInSeconds )/60,1)*60) ),
&quot;:0&quot; + TEXT( FLOOR(MOD((CallDurationInSeconds )/60,1)*60) )
)</formula>
    <label>Call Duration Seconds</label>
    <type>Text</type>
</CustomField>