force-app/main/default/objects/Activity/fields/Call_Duration_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Time__c</fullName>
    <formula>(Call_Duration_Hours__c + Call_Duration_Minutes__c + Call_Duration_Seconds__c )</formula>
    <label>Call Duration Time</label>
    <type>Text</type>
</CustomField>