force-app/main/default/objects/Activity/fields/Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Team__c</fullName>
    <description>The Team that the owner of the activity is on</description>
    <formula>TEXT( Owner:User.Team__c )</formula>
    <inlineHelpText>The Team that the owner of the activity is on</inlineHelpText>
    <label>Case Team</label>
    <type>Text</type>
</CustomField>