force-app/main/default/objects/Activity/fields/Comment_Catch_for_Mass_Mail_Type__c.field-meta.xml
<CustomField>
    <fullName>Comment_Catch_for_Mass_Mail_Type__c</fullName>
    <description>Catches the first 245 characters of the Activity.Comments field when created via a workflow rule, in order to determine mass emails / mail merge from Yesware.)</description>
    <inlineHelpText>Catches the first 245 characters of the Activity.Comments field when created via a workflow rule, in order to determine mass emails / mail merge from Yesware.)</inlineHelpText>
    <label>Comment Catch for Mass Mail Type</label>
    <type>TextArea</type>
</CustomField>