force-app/main/default/objects/Activity/fields/Complete_Task_By__c.field-meta.xml
<CustomField>
    <fullName>Complete_Task_By__c</fullName>
    <formula>ActivityDate + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Task By:</label>
    <type>Date</type>
</CustomField>