force-app/main/default/objects/Activity/fields/Created_By_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Assignee__c</fullName>
    <description>Returns &quot;true&quot; if the activity was created by its owner</description>
    <formula>OwnerId = CreatedById</formula>
    <label>Created By Assignee</label>
    <type>Checkbox</type>
</CustomField>