force-app/main/default/objects/Activity/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>Custom Formula Field to return Created Date &amp; Time on Activities and Events</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>Custom Formula Field to return Created Date &amp; Time on Activities and Events</inlineHelpText>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>