force-app/main/default/objects/Activity/fields/Current_MStar_Fees__c.field-meta.xml
<CustomField>
    <fullName>Current_MStar_Fees__c</fullName>
    <description>Current MStar fee estimate as of July 2019</description>
    <inlineHelpText>Current MStar fee estimate as of July 2019</inlineHelpText>
    <label>Current MStar Fees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>