force-app/main/default/objects/Activity/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <description>Used to filter reports for activities owned by the User viewing the report</description>
    <formula>IF(OwnerId = $User.Id , 1 , 0)</formula>
    <inlineHelpText>Used to filter reports for activities owned by the User viewing the report</inlineHelpText>
    <label>Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>