force-app/main/default/objects/Activity/fields/DateSent__c.field-meta.xml
<CustomField>
    <fullName>DateSent__c</fullName>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>