force-app/main/default/objects/Activity/fields/Demo_Completed__c.field-meta.xml
<CustomField>
    <fullName>Demo_Completed__c</fullName>
    <formula>IF(
OR( 
CONTAINS(Subject,&quot;Call- Demo&quot;), 
CONTAINS(Subject,&quot;Call- Disco+Demo&quot;), 
CONTAINS(Subject,&quot;Call- Qual+Disco+Demo&quot;) 
),true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Completed</label>
    <type>Checkbox</type>
</CustomField>