force-app/main/default/objects/Activity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Ops</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Saver Success</fullName>
            </value>
            <value>
                <fullName>Zenefits Servicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>