force-app/main/default/objects/Activity/fields/Discovery_Completed__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Completed__c</fullName>
    <formula>IF(
OR( 
CONTAINS(Subject,&quot;Call- Discovery&quot;), 
CONTAINS(Subject,&quot;Call- Qual+Disco&quot;), 
CONTAINS(Subject,&quot;Call- Qual+Disco+Demo&quot;) 
),true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discovery Completed</label>
    <type>Checkbox</type>
</CustomField>