force-app/main/default/objects/Activity/fields/Dispostion__c.field-meta.xml
<CustomField>
    <fullName>Dispostion__c</fullName>
    <formula>TEXT(zoom_app__Zoom_Call_Log__r.zoom_app__Disposition__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispostion</label>
    <type>Text</type>
</CustomField>