force-app/main/default/objects/Activity/fields/EmailName__c.field-meta.xml
<CustomField>
    <fullName>EmailName__c</fullName>
    <label>Email Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>