force-app/main/default/objects/Activity/fields/Enroll_Participation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Participation_Rate__c</fullName>
    <description># of Employees w/ balances / # of Eligible Employees</description>
    <formula>Number_of_Participants_with_a_Balance__c / Number_of_Eligible_Participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># of Employees w/ balances / # of Eligible Employees</inlineHelpText>
    <label>Enroll Participation Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>