force-app/main/default/objects/Activity/fields/Estimated_CY_Fees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_CY_Fees__c</fullName>
    <description>Estimated fees if move to Censibly Yours (as of July 2019)</description>
    <inlineHelpText>Estimated fees if move to Censibly Yours (as of July 2019)</inlineHelpText>
    <label>Estimated CY Fees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>