force-app/main/default/objects/Activity/fields/Event_Completed__c.field-meta.xml
<CustomField>
    <fullName>Event_Completed__c</fullName>
    <formula>(StartDate__c + 15) &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Completed</label>
    <type>Checkbox</type>
</CustomField>