force-app/main/default/objects/Activity/fields/Event_Result__c.field-meta.xml
<CustomField>
    <fullName>Event_Result__c</fullName>
    <description>What was the result of the event?</description>
    <inlineHelpText>What was the result of the event?</inlineHelpText>
    <label>Event Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>