force-app/main/default/objects/Activity/fields/Expected_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Check_Date__c</fullName>
    <formula>ActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Check Date</label>
    <type>Date</type>
</CustomField>