force-app/main/default/objects/Activity/fields/Five9__Five9TaskType__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9TaskType__c</fullName>
    <label>Five9 Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>