force-app/main/default/objects/Activity/fields/Five9_Handle_Time_Sec__c.field-meta.xml
<CustomField>
    <fullName>Five9_Handle_Time_Sec__c</fullName>
    <formula>VALUE(LEFT( Five9HandleTime__c , 2))*3600 + VALUE(MID(Five9HandleTime__c , 4, 2))*60 + VALUE(RIGHT(Five9HandleTime__c , 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Five9 Handle Time (Sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>