force-app/main/default/objects/Activity/fields/Five9Agent__c.field-meta.xml
<CustomField>
    <fullName>Five9Agent__c</fullName>
    <label>Five9Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>