force-app/main/default/objects/Activity/fields/Five9AgentExtension__c.field-meta.xml
<CustomField>
    <fullName>Five9AgentExtension__c</fullName>
    <label>Five9AgentExtension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>