force-app/main/default/objects/Activity/fields/Five9AgentName__c.field-meta.xml
<CustomField>
    <fullName>Five9AgentName__c</fullName>
    <label>Five9AgentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>