force-app/main/default/objects/Activity/fields/Five9ANI__c.field-meta.xml
<CustomField>
    <fullName>Five9ANI__c</fullName>
    <label>Five9ANI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>