force-app/main/default/objects/Activity/fields/Five9CallType__c.field-meta.xml
<CustomField>
    <fullName>Five9CallType__c</fullName>
    <label>Five9CallType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>