force-app/main/default/objects/Activity/fields/Five9Campaign__c.field-meta.xml
<CustomField>
    <fullName>Five9Campaign__c</fullName>
    <label>Five9Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>