force-app/main/default/objects/Activity/fields/Five9DistributionMode__c.field-meta.xml
<CustomField>
    <fullName>Five9DistributionMode__c</fullName>
    <label>Five9DistributionMode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>