force-app/main/default/objects/Activity/fields/Five9DNIS__c.field-meta.xml
<CustomField>
    <fullName>Five9DNIS__c</fullName>
    <label>Five9DNIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>