force-app/main/default/objects/Activity/fields/Five9EscalatedCallID__c.field-meta.xml
<CustomField>
    <fullName>Five9EscalatedCallID__c</fullName>
    <label>Five9EscalatedCallID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>