force-app/main/default/objects/Activity/fields/Five9HandleTime__c.field-meta.xml
<CustomField>
    <fullName>Five9HandleTime__c</fullName>
    <label>Five9HandleTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>