force-app/main/default/objects/Activity/fields/Five9InteractionDuration__c.field-meta.xml
<CustomField>
    <fullName>Five9InteractionDuration__c</fullName>
    <label>Five9InteractionDuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>