force-app/main/default/objects/Activity/fields/Five9MediaSubtype__c.field-meta.xml
<CustomField>
    <fullName>Five9MediaSubtype__c</fullName>
    <label>Five9MediaSubtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>