force-app/main/default/objects/Activity/fields/Five9Queue__c.field-meta.xml
<CustomField>
    <fullName>Five9Queue__c</fullName>
    <label>Five9Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>