force-app/main/default/objects/Activity/fields/Five9TalkAndHoldTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>Five9TalkAndHoldTimeInSeconds__c</fullName>
    <label>Five9TalkAndHoldTimeInSeconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>