force-app/main/default/objects/Activity/fields/Five9WrapTime__c.field-meta.xml
<CustomField>
    <fullName>Five9WrapTime__c</fullName>
    <label>Five9WrapTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>