force-app/main/default/objects/Activity/fields/Imp_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Imp_Call_Complete__c</fullName>
    <description>Checks related Implementation to see if the call has been completed.</description>
    <formula>IF((Implementation__r.Intro_Call_Complete__c = TRUE &amp;&amp;  CONTAINS(Subject, &quot;Introductory&quot;)), TRUE,
IF((Implementation__r.Census_Call_Complete__c = TRUE &amp;&amp;  CONTAINS(Subject, &quot;Add Your Employees&quot;)), TRUE,
IF((Implementation__r.Funding_Call_Complete__c = TRUE &amp;&amp;  CONTAINS(Subject, &quot;Final Review and Funding&quot;)), TRUE, FALSE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks related Implementation to see if the call has been completed.</inlineHelpText>
    <label>Imp Call Complete</label>
    <type>Checkbox</type>
</CustomField>