force-app/main/default/objects/Activity/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Implementation the Event is relate to</description>
    <inlineHelpText>Implementation the Event is relate to</inlineHelpText>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>