force-app/main/default/objects/Activity/fields/Link1__c.field-meta.xml
<CustomField>
    <fullName>Link1__c</fullName>
    <label>Link 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>