force-app/main/default/objects/Activity/fields/Link2__c.field-meta.xml
<CustomField>
    <fullName>Link2__c</fullName>
    <label>Link 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>