force-app/main/default/objects/Activity/fields/Link3__c.field-meta.xml
<CustomField>
    <fullName>Link3__c</fullName>
    <label>Link 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>