force-app/main/default/objects/Activity/fields/Number_of_Eligible_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Eligible_Participants__c</fullName>
    <description>The number of employees that are eligible to participate in the plan</description>
    <inlineHelpText>The number of employees that are eligible to participate in the plan</inlineHelpText>
    <label>Number of Eligible Participants</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>