force-app/main/default/objects/Activity/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Number of Employees at Company</description>
    <inlineHelpText>Number of Employees at Company</inlineHelpText>
    <label>Number of Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>