force-app/main/default/objects/Activity/fields/Number_of_Participants_Currently_Saving__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants_Currently_Saving__c</fullName>
    <description>Confirm # of eligible participants who are actively contributing to the plan from payroll</description>
    <inlineHelpText>Confirm # of eligible participants who are actively contributing to the plan from payroll</inlineHelpText>
    <label>Number of Participants Currently Saving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>