force-app/main/default/objects/Activity/fields/Number_of_Participants_with_a_Balance__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants_with_a_Balance__c</fullName>
    <description>Number of active participants in the plan with a balance.</description>
    <inlineHelpText>Number of active participants in the plan with a balance.</inlineHelpText>
    <label>Number of Participants with a Balance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>