force-app/main/default/objects/Activity/fields/Open_Event__c.field-meta.xml
<CustomField>
    <fullName>Open_Event__c</fullName>
    <description>For reporting on open events.</description>
    <formula>(TODAY() &lt; ActivityDate) &amp;&amp; IsTask = False</formula>
    <label>Open Event</label>
    <type>Checkbox</type>
</CustomField>