force-app/main/default/objects/Activity/fields/OpenDate__c.field-meta.xml
<CustomField>
    <fullName>OpenDate__c</fullName>
    <label>Open Date</label>
    <type>DateTime</type>
</CustomField>