force-app/main/default/objects/Activity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>This field should be used when logging a referral from a PayChoice rep.</description>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-Chx</fullName>
            </value>
            <value>
                <fullName>PayChoice</fullName>
            </value>
            <value>
                <fullName>Payroll Associates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>