force-app/main/default/objects/Activity/fields/Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>Payroll_ID__c</fullName>
    <description>Payroll ID Number</description>
    <inlineHelpText>Payroll ID Number</inlineHelpText>
    <label>Payroll ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>