force-app/main/default/objects/Activity/fields/Payroll_Platform__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Platform__c</fullName>
    <label>Payroll Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADP Run</fullName>
            </value>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Alphastaff</fullName>
            </value>
            <value>
                <fullName>Extensis</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Intuit Online</fullName>
            </value>
            <value>
                <fullName>iSolved Insperity</fullName>
            </value>
            <value>
                <fullName>JustWorks</fullName>
            </value>
            <value>
                <fullName>N/A – Identillect</fullName>
            </value>
            <value>
                <fullName>OnPay</fullName>
            </value>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>Quickbooks Online</fullName>
            </value>
            <value>
                <fullName>Square Payroll</fullName>
            </value>
            <value>
                <fullName>TriNet</fullName>
            </value>
            <value>
                <fullName>Zenefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>